<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".JJConfigurationActivity" android:background="@color/colorAccent">


    <EditText
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:enabled="false"
            android:ems="10"
            android:id="@+id/player2" android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true" android:layout_marginBottom="157dp"
            android:hint="@string/josephbot" android:text="@string/jeanbot"/>
    <TextView
            android:text="@string/payer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/buttonstart" android:id="@+id/textView4" android:textSize="18sp"
            android:textColor="@color/colorText" android:layout_above="@+id/player2"/>
    <Button
            android:text="@string/start_button"
            android:textColor="@color/colorText"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonstart" android:layout_centerHorizontal="true" android:layout_alignParentBottom="true"
            android:layout_marginBottom="73dp" android:onClick="startGame"/>
    <RadioGroup
            android:layout_width="176dp"
            android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_marginTop="30dp"
            android:layout_alignStart="@+id/buttonstart" android:id="@+id/groupplayer"
            android:checkedButton="@+id/oneplayer" android:onClick="selectPlayer">
        <RadioButton
                android:text="@string/conf_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/oneplayer" android:layout_weight="1"
                android:textColor="@color/colorText" android:onClick="selectPlayer"/>
        <RadioButton
                android:text="@string/conf_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/twoplayers" android:layout_weight="1"
                android:textColor="@color/colorText" android:onClick="selectPlayer"/>
    </RadioGroup>
    <TextView
            android:text="@string/player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/player1" android:id="@+id/textView2" android:textSize="18sp"
            android:textColor="@color/colorText" android:layout_above="@+id/player1"
            android:layout_marginBottom="-219dp"/>
    <EditText
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/player1" android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true" android:layout_marginTop="219dp" android:hint="@string/charlesbot"/>
    <Switch
            android:text="@string/first"
            android:layout_width="118dp"
            android:enabled="false"
            android:layout_height="wrap_content"
            android:id="@+id/switch1" android:layout_alignParentTop="true" android:layout_marginTop="108dp"
            android:layout_alignParentEnd="true" android:layout_marginEnd="119dp" android:onClick="selectStarter"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:layout_alignEnd="@+id/buttonstart" android:layout_alignBottom="@+id/switch1"
            android:checkedButton="@+id/easy" android:id="@+id/level" android:onClick="selectLevel">
        <RadioButton
                android:text="@string/easy"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/easy" android:layout_weight="1"
                android:onClick="selectLevel"/>
        <RadioButton
                android:text="@string/medium"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/medium" android:layout_weight="1"
                android:onClick="selectLevel"/>
        <RadioButton
                android:text="@string/hard"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/hard" android:layout_weight="1"
                android:onClick="selectLevel"/>
    </RadioGroup>

</RelativeLayout>