<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".JJPanelActivity" android:background="@color/colorAccent">

    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize" android:layout_alignParentStart="true"
            android:id="@+id/toolbar" android:layout_alignParentBottom="true"/>
    <Button
            android:text="@string/level_button"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:id="@+id/levelbutton" android:layout_alignParentStart="true" android:layout_marginStart="20dp"
            android:layout_alignParentBottom="true" android:textColor="@color/colorText" android:textStyle="bold"/>
    <Button
            android:text="@string/close_button"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:id="@+id/closebutton"
            android:layout_alignParentBottom="true" android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp" android:textColor="@color/colorText" android:textStyle="bold"/>
    <TableLayout
            android:layout_width="333dp"
            android:layout_height="303dp"
            android:stretchColumns="*"
            android:gravity="center_vertical"
            android:layout_alignParentTop="true" android:layout_marginTop="27dp"
            android:layout_centerHorizontal="true" android:background="@android:color/background_dark">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/btn00"/>
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/btn01"/>
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/btn02"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher_round"
                    android:id="@+id/btn10"/>
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher_round"
                    android:id="@+id/btn11"/>
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/btn12"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher_round"
                    android:id="@+id/btn20"/>
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher_round"
                    android:id="@+id/btn21"/>
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher_round"
                    android:id="@+id/btn22"/>
        </TableRow>
    </TableLayout>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentBottom="true"
            android:layout_marginBottom="143dp" android:layout_centerHorizontal="true" android:id="@+id/textView9"
            android:textSize="18sp" android:textColor="@color/colorText" android:textStyle="bold|italic"
            app:fontFamily="casual" tools:text="Score"/>
    <TextView
            android:text="TextView"
            android:layout_width="138dp"
            android:layout_height="wrap_content" android:layout_alignParentBottom="true"
            android:layout_marginBottom="108dp" android:id="@+id/name1" android:layout_alignParentStart="true"
            android:layout_marginStart="70dp" android:textSize="18sp" android:textColor="@color/colorText"
            android:textStyle="bold|italic" app:fontFamily="casual" tools:text="@string/charlesbot"/>
    <TextView
            android:text="TextView"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/name1" android:id="@+id/name2"
            android:layout_alignParentBottom="true" android:layout_marginBottom="69dp" android:textSize="18sp"
            android:textColor="@color/colorText" android:textStyle="bold|italic" app:fontFamily="casual"
            tools:text="@string/josephbot"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_toEndOf="@+id/textView9"
            android:layout_alignTop="@+id/name1" android:id="@+id/score1" android:textSize="18sp"
            android:textColor="@color/colorText" android:textStyle="bold|italic" app:fontFamily="casual"
            tools:text="0"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_toEndOf="@+id/textView9"
            android:layout_alignTop="@+id/name2" android:id="@+id/score2" android:textSize="18sp"
            android:textColor="@color/colorText" android:textStyle="bold|italic" app:fontFamily="casual"
            tools:text="0"/>
</RelativeLayout>